--- a/app/frontend/deployment.yaml
+++ b/app/frontend/deployment.yaml
@@ -19,3 +19,7 @@ spec:
         image: us.gcr.io/my-project-1518483136546/taco-frontend:latest
         ports:
         - containerPort: 3000
+        env:
+          - name: "APP_ENV"
+            value: production
+
