--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -40,6 +40,6 @@ RUN npm run build
 
 FROM nginx:alpine
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=node /app/build /usr/share/nginx/html
+COPY --from=0 /app/build /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
