--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,11 +1,23 @@
 #start from node base image
-FROM node
+FROM node 
+
+# specifies production or testing mode API URL
+ENV API_URL = "localhost"
 
 # less messages during Docker build
 ENV NPM_CONFIG_LOGLEVEL warn 
 
+# Allows app_env to be set during build (defaults to empty string)
+ARG app_env                  
+
+# sets an environment variable to app_env argument, so that variable will persist in container for use in node
+ENV APP_ENV $app_env         
+
 # creates folder to add code into
-RUN mkdir -p /app      
+RUN mkdir -p /app   
+
+# all commands will be run from this folder now
+WORKDIR /app          
 
 # copy code in local frontend directory into container's working directory
 COPY . /app    
@@ -20,26 +32,17 @@ RUN npm install --save-dev mocha
 # If the arg_env was set as production, then this will install http-server and build/service optimized static files
 # Otherwise, uses create-react-app's hot reloading tool
 
-# RUN npm install -g react-scripts
-# # RUN npm run start
-# CMD if [ ${APP_ENV} = production ]; \
-# 	then \
-# 	npm install -g http-server && \
-# 	npm run build && \
-# 	cd build && \
-# 	hs -p 3000; \
-# 	else \
-# 	npm run start; \
-# 	fi
+RUN npm install -g react-scripts
+# RUN npm run start
+CMD if [ ${APP_ENV} = production ]; \
+	then \
+	npm install -g http-server && \
+	npm run build && \
+	cd build && \
+	hs -p 3000; \
+	else \
+	npm run start; \
+	fi
 
-# # app runs on port 3000 by default
-# EXPOSE 3000
-
-
-RUN npm run build
-
-FROM nginx:alpine
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=0 /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# app runs on port 3000 by default
+EXPOSE 3000
