--- a/ingress.yaml
+++ b/ingress.yaml
@@ -5,9 +5,6 @@ metadata:
   annotations:
     kubernetes.io/ingress.global-static-ip-name: taco-ip
 spec:
-  # backend:
-  #   serviceName: frontend-deployment
-  #   servicePort: 3000
   rules:
   - http:
       paths:
@@ -15,3 +12,7 @@ spec:
         backend:
           serviceName: frontend-deployment
           servicePort: 3000
+      - path: /api/*
+        backend:
+          serviceName: backend-deployment
+          servicePort: 80
