--- a/services.yaml
+++ b/services.yaml
@@ -1,3 +1,4 @@
+head: 287633cd658cb05d65dd92661f027df4cf2b7e8a
 services:
   frontend:
     path: app/frontend
@@ -7,7 +8,7 @@ services:
     build:
       image name: us.gcr.io/my-project-1518483136546/taco-frontend
       path: Dockerfile
-      version: 1.0.69
+      version: 1.0.10
     test:
       command: npm run test
       image name: taco-frontend-test
@@ -20,7 +21,7 @@ services:
     build:
       image name: us.gcr.io/my-project-1518483136546/taco-backend
       path: Dockerfile
-      version: 1.0.70
+      version: 1.0.68
     test:
       command: python tests.py
       image name: taco-backend-test
