--- a/app/backend/deployment.yaml
+++ b/app/backend/deployment.yaml
@@ -5,7 +5,12 @@ metadata:
   labels:
     app: backend
 spec:
-  replicas: 1 
+  replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 25%
   selector:
     matchLabels:
       app: backend
